Serialize JSON and decode TTN message

--- a/.config.nodes.json
+++ b/.config.nodes.json
@@ -857,5 +857,24 @@
                 "file": "/home/pi/.node-red/node_modules/@mschaeffler/node-red-lora/lorawan-queue-message.js"
             }
         }
+    },
+    "node-red-node-base64": {
+        "name": "node-red-node-base64",
+        "version": "0.3.0",
+        "local": true,
+        "user": true,
+        "nodes": {
+            "base64": {
+                "name": "base64",
+                "types": [
+                    "base64"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-node-base64",
+                "file": "/home/pi/.node-red/node_modules/node-red-node-base64/70-base64.js"
+            }
+        }
     }
 }
