--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-red-contrib-play-audio": "^2.5.0",
     "node-red-contrib-postgresql": "^0.10.1",
     "node-red-dashboard": "^3.1.7",
+    "node-red-node-base64": "^0.3.0",
     "node-red-node-pi-gpio": "^2.0.3",
     "node-red-node-ping": "^0.3.1",
     "node-red-node-random": "^0.4.0",
